# Summit-SOM-Zephyr-Sample-Apps

buttons/: CMakeLists.txt  Kconfig  README.rst  prj.conf
buttons/boards/: summit_som8mplus_dvk_ddr.overlay  summit_som8mplus_dvk_qspi.overlay
buttons/src/: empty_rsc_table.c  main.c
low_power_audio/: CMakeLists.txt  Kconfig  README.rst  linker.ld  prj.conf
low_power_audio/boards/: summit_som8mplus_dvk_itcm.overlay
low_power_audio/include/: app_srtm.h  low_power_audio.h  lpm.h  remoteproc.h  rsc_table.h  srtm_config.h
low_power_audio/src/: app_srtm.c  lpm.c  main.c  rpmsg_env_zephyr.c  rpmsg_platform.c  srtm_heap_zephyr.c  srtm_mutex_zephyr.c  srtm_sem_zephyr.c
low_power_wakeup/: CMakeLists.txt  Kconfig  README.rst  linker.ld  prj.conf
low_power_wakeup/boards/: summit_som8mplus_dvk_itcm.overlay
low_power_wakeup/include/: low_power_wakeup.h  lpm.h
low_power_wakeup/src/: empty_rsc_table.c  lpm.c  main.c
rgb_blinky/: CMakeLists.txt  Kconfig  README.rst  prj.conf
rgb_blinky/boards/: summit_som8mplus_dvk_itcm.overlay  summit_som8mplus_dvk_qspi.overlay
rgb_blinky/src/: main.c
rpmsg_lite_str_echo/: CMakeLists.txt  Kconfig  README.rst  linker.ld  prj.conf
rpmsg_lite_str_echo/boards/: summit_som8mplus_dvk_ddr.overlay  summit_som8mplus_dvk_itcm.overlay
rpmsg_lite_str_echo/include/: remoteproc.h  rpmsg_config.h  rpmsg_lite_str_echo.h  rsc_table.h
rpmsg_lite_str_echo/src/: main.c  rpmsg_env_zephyr.c  rpmsg_platform.c  rsc_table.c
